# DRF_Serializers_and_filters_24.2

./: README.md  data.json  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  serilzers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
env/Scripts/: activate.bat
lessons/: admin.py  models.py  serilzers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py
payments/: admin.py  apps.py  models.py  serilzers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serilzers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py
